--- a/test/fixtures/relationships.yml
+++ b/test/fixtures/relationships.yml
@@ -1,1 +1,15 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+one:
+  follower: michael
+  folloed: lana
+
+two:
+  follower: michael
+  folloed: malory
+
+three:
+  follower: lana
+  folloed: michael
+
+four:
+  follower: archer
+  folloed: michael
